--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.12.1",
     "jodit-react": "^5.2.25",
     "localforage": "^1.10.0",
     "lucide-react": "^0.511.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^3.2.1",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
